--- a/frontend/app/views/event/masterclass.scala.html
+++ b/frontend/app/views/event/masterclass.scala.html
@@ -7,7 +7,7 @@
         <h1 class="header-bar__title">
             Courses and workshops taught by award-winning professionals, with discounts for Partners and Patrons
         </h1>
-        <i class="event-logo icon-sprite-masterclasses"></i>
+        <i class="event-logo icon-masterclasses"></i>
     </section>
     <nav role="navigation" class="nav nav--global nav--global--masterclasses">
         <div class="navigation__scroll">
@@ -30,7 +30,7 @@
                        data-filter-field="title"
                        placeholder="Filter by title"
                        autocomplete="off" />
-                <i class="events-list__filter__icon icon-sprite-search"></i>
+                <i class="events-list__filter__icon icon-search"></i>
             </label>
         </div>
     </div>
