--- a/frontend/app/views/fragments/nav.scala.html
+++ b/frontend/app/views/fragments/nav.scala.html
@@ -6,7 +6,7 @@
 
 @if(inlineMode) {
     <li class="@navItemClass()">
-        <a href="/" class="nav__link"><i class="icon-sprite-home"></i></a>
+        <a href="/" class="nav__link"><i class="icon-home"></i></a>
     </li>
 }
 <li class="@navItemClass()">
