--- a/frontend/assets/stylesheets/_print.scss
+++ b/frontend/assets/stylesheets/_print.scss
@@ -22,7 +22,7 @@
     }
 
     // don't try to show icons (they appear onscreen but not when printed)
-    .icon-sprite {
+    .icon {
         display: none !important;
     }
 
