--- a/frontend/assets/stylesheets/layout/_homeslice.scss
+++ b/frontend/assets/stylesheets/layout/_homeslice.scss
@@ -544,7 +544,7 @@
     padding: rem($gs-gutter) rem($gs-gutter) rem($gs-gutter) rem(65px);
 
     &:before {
-        @extend %icon-sprite-g-white-36;
+        @extend %icon-g-white-36;
         content: '';
         display: block;
         position: absolute;
