--- a/frontend/assets/stylesheets/pages/_about.scss
+++ b/frontend/assets/stylesheets/pages/_about.scss
@@ -113,7 +113,7 @@ h2.about-block-title {
             height: rem(190px);
         }
 
-        .icon-sprite__left {
+        .icon__left {
             float: left;
             margin: 0 rem($gs-gutter) rem($gs-gutter * 2) 0;
 
