--- a/frontend/assets/stylesheets/pages/_events-summary.scss
+++ b/frontend/assets/stylesheets/pages/_events-summary.scss
@@ -64,11 +64,11 @@
         width: rem(25px);
     }
 
-    .icon-sprite-eventbrite {
+    .icon-eventbrite {
         margin-top: rem(3px);
     }
 
-    .icon-sprite-early_booking-grey {
+    .icon-early_booking-grey {
         margin-top: rem(-2px);
     }
 }
