--- a/frontend/app/views/info/about.scala.html
+++ b/frontend/app/views/info/about.scala.html
@@ -23,42 +23,42 @@
             <h2 class="about-block-title">What's included</h2>
             <ul class="benefits__list u-unstyled u-cf">
                 <li class="benefits__list--items">
-                    <i class="icon-sprite__left icon-sprite-large-book_tickets"></i>
+                    <i class="icon__left icon-large-book_tickets"></i>
                     <span class="benefits__list--header">Book tickets</span>
                     <p>Book tickets to Guardian Live events</p>
                 </li>
                 <li class="benefits__list--items">
-                    <i class="icon-sprite__left icon-sprite-large-digital_digest"></i>
+                    <i class="icon__left icon-large-digital_digest"></i>
                     <span class="benefits__list--header">Membership email updates</span>
                     <p>Receive regular updates on the upcoming programme</p>
                 </li>
                 <li class="benefits__list--items">
-                    <i class="icon-sprite__left icon-sprite-large-video_highlights"></i>
+                    <i class="icon__left icon-large-video_highlights"></i>
                     <span class="benefits__list--header">Video highlights</span>
                     <p>Watch highlights of selected Guardian Live events</p>
                 </li>
                 <li class="benefits__list--items">
-                    <i class="icon-sprite__left icon-sprite-large-discount"></i>
+                    <i class="icon__left icon-large-discount"></i>
                     <span class="benefits__list--header">20% Discount</span>
                     <p>20% discount on Guardian Live tickets for Partners and Patrons</p>
                 </li>
                 <li class="benefits__list--items">
-                    <i class="icon-sprite__left icon-sprite-large-plus_1_guest"></i>
+                    <i class="icon__left icon-large-plus_1_guest"></i>
                     <span class="benefits__list--header">+1 Guest</span>
                     <p>Bring a guest to Guardian Live with the same discount and priority booking advantages for Partners and Patrons</p>
                 </li>
                 <li class="benefits__list--items">
-                    <i class="icon-sprite__left icon-sprite-large-live_stream"></i>
+                    <i class="icon__left icon-large-live_stream"></i>
                     <span class="benefits__list--header">Live stream events</span>
                     <p>Watch live streams of Flagship events for Partners and Patrons</p>
                 </li>
                 <li class="benefits__list--items">
-                    <i class="icon-sprite__left icon-sprite-large-membership_card"></i>
+                    <i class="icon__left icon-large-membership_card"></i>
                     <span class="benefits__list--header">Membership card</span>
                     <p>For Partners and Patrons</p>
                 </li>
                 <li class="benefits__list--items">
-                    <i class="icon-sprite__left icon-sprite-large-early_booking"></i>
+                    <i class="icon__left icon-large-early_booking"></i>
                     <span class="benefits__list--header">Early booking</span>
                     <p>Early booking for Partners and Patrons</p>
                 </li>
