--- a/frontend/assets/stylesheets/base/_type.scss
+++ b/frontend/assets/stylesheets/base/_type.scss
@@ -61,7 +61,7 @@ blockquote {
     margin-bottom: rem(10px);
 
     &:before {
-        @extend %icon-sprite-quote-blue;
+        @extend %icon-quote-blue;
         content: '';
         display: block;
         float: left;
