--- a/frontend/app/views/index.scala.html
+++ b/frontend/app/views/index.scala.html
@@ -11,10 +11,10 @@
     <div class="home-slice home-slice--epic home-slice--epic-home-page tier-hidden u-cf">
         <div class="home-slice__inner u-cf">
             <div class="home-slice__headline-block">
-                <h1 class="home-slice__headline">We believe real, face-to-face discussion<br /><span class="headline-highlight">has a unique power to broaden minds.</span></h1>
+                <h1 class="home-slice__headline">Guardian Membership brings the Guardian to life</h1>
             </div>
             <div class="home-slice__copy-block">
-                <p class="home-slice__copy">Guardian Membership is the community for those who share this belief.</p>
+                <p class="home-slice__copy">Because we believe real, face-to-face discussions have the power to broaden minds.</p>
                 <a class="action home-slice__action action--secondary-button" href="/about">Learn more</a>
                 <p class="home-slice__copy">Guardian Membership transforms everything you enjoy from the Guardian into live events, in the form of discussions, demonstrations, interviews, speeches and debates.</p>
                 <a class="action home-slice__action" href="/join">Join today</a>
@@ -43,7 +43,7 @@
     <div class="home-slice u-cf home-slice--red home-slice--home-two">
         <div class="home-slice__inner u-cf">
             <div class="home-slice__headline-block">
-                <h2 class="home-slice__headline">Events that bring the Guardian to life</h2>
+                <h2 class="home-slice__headline">Browse our events and book your tickets now</h2>
             </div>
             <div class="home-slice__copy-block">
                 <p class="home-slice__copy">Guardian Live is a programme of discussions, debates, interviews,
@@ -66,12 +66,12 @@
                     <img src="@Asset.at("images/homeslice/740-Home-patrons.jpg")" alt="" class="responsive-img" />
                 </div>
                 <div class="home-slice__headline-block">
-                    <h2 class="home-slice__headline">Membership fuels our journalism</h2>
+                    <h2 class="home-slice__headline">Become a Patron and support the Guardian's future</h2>
                 </div>
                 <div class="home-slice__offset-copy">
                     <blockquote class="home-slice__copy--quote">The only relationship our journalists have is with our readers. Membership gives the real possibility of deepening the intense bond between the producers and consumers of the Guardian.</blockquote>
                     <cite class="home-slice__copy--cite">Alan Rusbridger, editor-in-chief of the Guardian</cite>
-                    <a class="action" href="/patrons">Start your journey as Patron</a>
+                    <a class="action" href="/patrons">Become a Patron</a>
                 </div>
             </div>
         </div>
