--- a/frontend/app/views/home.scala.html
+++ b/frontend/app/views/home.scala.html
@@ -48,9 +48,9 @@
     <section class="home-promo-list-container">
         <ul class="home-promo-list u-unstyled">
             @promoElement("whats-included-", "Discover what's included with Guardian Membership", "/about", "png")
-            @promoElement("events-", "Browse our events catalogue and book your tickets now", "/events")
+            @promoElement("events-", "Browse our events and book your tickets now", "/events")
             @promoElement("compare-tiers-", "Compare the three tiers of Guardian Membership", "/join")
-            @promoElement("become_patron_", "Join as a Patron today and support the Guardian's mission of promoting the open exchange of ideas", "/patrons")
+            @promoElement("become_patron_", "Become a Patron and support the Guardian's future", "/patrons")
         </ul>
     </section>
 }
