--- a/frontend/assets/stylesheets/home/_home.scss
+++ b/frontend/assets/stylesheets/home/_home.scss
@@ -4,7 +4,7 @@
     background-color: $white;
 
     @include mq(tablet) {
-        padding: rem(20px) rem(30px) 0 rem(20px);
+        padding: rem($gs-gutter) rem($gs-gutter * 1.5) 0 rem($gs-gutter);
         width: 51%;
         float: right;
         position: relative;
@@ -47,7 +47,7 @@
 .slide-show-detail {
     position: absolute;
     bottom: 0;
-    padding: rem(20px) 0 rem(20px) rem(20px);
+    padding: rem($gs-gutter) 0 rem($gs-gutter) rem($gs-gutter);
     width: 100%;
     color: $white;
     z-index: 2;
@@ -95,7 +95,7 @@
 }
 
 .home-promo-list-container {
-    padding-right: rem(20px);
+    padding-right: rem($gs-gutter);
 }
 
 .home-promo-list {
@@ -103,19 +103,19 @@
     display: table;
     table-layout: fixed;
     border-collapse: collapse;
-    padding: 0 rem(20px);
-    margin: rem(20px) 0;
+    padding: 0 rem($gs-gutter);
+    margin: rem($gs-gutter) 0;
 
     @include mq(tablet) {
-        margin: rem(40px) 0 rem(64px);
+        margin: rem($gs-gutter * 2) 0 rem(64px);
     }
 }
 
 .home-promo {
-    padding-bottom: rem(20px);
+    padding-bottom: rem($gs-gutter);
 
     @include mq(tablet) {
-        padding-left: rem(20px);
+        padding-left: rem($gs-gutter);
         padding-bottom: 0;
         display: table-cell;
         vertical-align: top;
@@ -130,7 +130,7 @@
     font-family: $f-serif-headline;
     font-size: rem(18px);
     line-height: rem(22px);
-    margin-top: rem(10px);
+    margin-top: rem($gs-gutter / 2);
     color: $black;
     font-weight: normal;
 }
