--- a/frontend/app/views/fragments/form/nameDetail.scala.html
+++ b/frontend/app/views/fragments/form/nameDetail.scala.html
@@ -21,7 +21,8 @@
                        value="@firstName"
                        class="text-input text-input--block js-name-first"
                        data-error-message="Please enter your first name"
-                       data-validation="required"/>
+                       data-validation="required"
+                       aria-required="true"/>
             </div>@*
             == Inline block whitespace ==
             *@<div class="form-field">
@@ -32,7 +33,8 @@
                        value="@lastName"
                        class="text-input text-input--block js-name-last"
                        data-error-message="Please enter your last name"
-                       data-validation="required"/>
+                       data-validation="required"
+                       aria-required="true"/>
             </div>
         </div>
 
