hide the progress indicator for ie9 as css slideshow doesnt work here

--- a/frontend/assets/stylesheets/_ie9.scss
+++ b/frontend/assets/stylesheets/_ie9.scss
@@ -92,6 +92,12 @@
     clear: both;
 }
 
+/* Hide progress indicator for home a-b test slide show as css animation does not work here
+   ========================================================================== */
+
+.progress-indicator {
+    display: none;
+}
 
 /* Footer ie9 fix
    ========================================================================== */
