--- a/frontend/assets/stylesheets/pages/_events-list.scss
+++ b/frontend/assets/stylesheets/pages/_events-list.scss
@@ -42,7 +42,8 @@
 }
 
 .event-block__header__count {
-    @include fs-headline(2);
+    @include fs-textSans(2);
+    color: $c-neutral2;
 
     .theme--masterclass &:after {
         content: ' courses';
@@ -79,9 +80,28 @@
     display: block;
 }
 
+.events-list__category {
+    display: block;
+    padding: rem($gs-gutter / 2) rem($gs-gutter) rem($gs-gutter / 2) 0;
+    margin-right: rem($gs-gutter);
+
+    @include fs-textSans(2);
+
+    @include mq(tablet) {
+        display: inline-block;
+        border-right: 1px solid $c-neutral4;
+    }
+}
+
+.events-list__category__select {
+    border: 0;
+    outline: 0;
+    background-color: white;
+    font-weight: bold;
+}
+
 .events-list__filter {
     position: relative;
-    display: block;
 }
 
 $filter-icon-size: 18px;
@@ -96,7 +116,7 @@ $filter-icon-size: 18px;
 
     width: 100%;
     @include mq(tablet) {
-        width: rem(300px);
+        width: auto;
     }
 }
 
