Move count next to category, filter to right

--- a/frontend/app/views/event/masterclass.scala.html
+++ b/frontend/app/views/event/masterclass.scala.html
@@ -20,6 +20,7 @@
                     }
                 </select>
             </label>
+            <span class="events-list__count js-filter-count">@eventPortfolio.normal.length</span>
             <label class="events-list__filter">
                 <input type="text"
                        class="events-list__filter__text"
