--- a/frontend/assets/stylesheets/pages/_events-list.scss
+++ b/frontend/assets/stylesheets/pages/_events-list.scss
@@ -41,20 +41,6 @@
     @include fs-header(4);
 }
 
-.event-block__header__count {
-    @include fs-textSans(2);
-    color: $c-neutral2;
-
-    .theme--masterclass &:after {
-        content: ' courses';
-    }
-
-    // We don't have enough events to show this at the moment!
-    .theme--guardian-live & {
-        display: none;
-    }
-}
-
 .event-block__events {
     overflow: hidden;
 
@@ -76,19 +62,19 @@
 
 // only visible when no filter results are found
 .events-list--empty:before {
-    content: 'No matching courses';
+    content: 'Sorry, no matching masterclasses.';
+
     display: block;
 }
 
 .events-list__category {
-    display: block;
+    display: inline-block;
     padding: rem($gs-gutter / 2) rem($gs-gutter) rem($gs-gutter / 2) 0;
     margin-right: rem($gs-gutter);
 
     @include fs-textSans(2);
 
     @include mq(tablet) {
-        display: inline-block;
         border-right: 1px solid $c-neutral4;
     }
 }
@@ -100,8 +86,27 @@
     font-weight: bold;
 }
 
+.events-list__count {
+    float: right;
+    margin-top: rem($gs-gutter / 2);
+    @include fs-textSans(2);
+    color: $c-neutral2;
+
+    &:after {
+        content: ' masterclasses';
+    }
+
+    @include mq(tablet) {
+        float: none;
+    }
+}
+
 .events-list__filter {
     position: relative;
+
+    @include mq(tablet) {
+        float: right;
+    }
 }
 
 $filter-icon-size: 18px;
