--- a/frontend/app/views/event/list.scala.html
+++ b/frontend/app/views/event/list.scala.html
@@ -1,4 +1,4 @@
-@(eventPortfolio: model.EventPortfolio, pageInfo: model.PageInfo, title: String)(implicit token: play.filters.csrf.CSRF.Token)
+@(eventPortfolio: model.EventPortfolio, pageInfo: model.PageInfo)(implicit token: play.filters.csrf.CSRF.Token)
 
 @import com.gu.membership.salesforce.Tier
 @import model.Benefits
@@ -25,7 +25,7 @@
 
     <div class="event-block">
         <div class="event-block__header">
-            <h4 class="event-block__header__title case--lower">@title</h4>
+            <h4 class="event-block__header__title case--lower">What's on</h4>
         </div>
         <div class="event-block__events">
             <ul class="events-list u-unstyled@if(eventPortfolio.normal.length == 0){ events-list--empty}" id="js-filter-container">
