Use $white not white

--- a/frontend/assets/stylesheets/pages/_events-list.scss
+++ b/frontend/assets/stylesheets/pages/_events-list.scss
@@ -82,7 +82,7 @@
 .events-list__category__select {
     border: 0;
     outline: 0;
-    background-color: white;
+    background-color: $white;
     font-weight: bold;
 }
 
