--- a/frontend/assets/stylesheets/_head.common.scss
+++ b/frontend/assets/stylesheets/_head.common.scss
@@ -22,6 +22,7 @@
 @import 'utility/flexbox';
 @import 'utility/hidden';
 @import 'utility/js-warning';
+@import 'utility/clipboard';
 @import 'pages/browser-warning';
 
 /* Layout
