--- a/frontend/app/views/index.scala.html
+++ b/frontend/app/views/index.scala.html
@@ -14,10 +14,10 @@
                 <h1 class="home-slice__headline">Guardian Membership brings the Guardian to life</h1>
             </div>
             <div class="home-slice__copy-block">
-                <p class="home-slice__copy">Because we believe real, face-to-face discussions have the power to broaden minds.</p>
-                <a class="action home-slice__action action--secondary-button" href="/about">Learn more</a>
-                <p class="home-slice__copy">Guardian Membership transforms everything you enjoy from the Guardian into live events, in the form of discussions, demonstrations, interviews, speeches and debates.</p>
+                <p class="home-slice__copy">We believe real, face-to-face discussions have the power to broaden minds.</p>
+                <p class="home-slice__copy">Guardian Membership transforms everything you enjoy in the Guardian into live events and meet-ups. Join and be part of the conversations that matter.</p>
                 <a class="action home-slice__action" href="/join">Join today</a>
+                <a class="action home-slice__action action--secondary-button" href="/about">Learn more</a>
             </div>
         </div>
     </div>
