--- a/frontend/app/views/info/about.scala.html
+++ b/frontend/app/views/info/about.scala.html
@@ -11,9 +11,9 @@
                 <h1 class="home-slice__headline">About <br/>Membership</h1>
             </div>
             <div class="home-slice__copy-block">
-                <p class="home-slice__copy">Guardian Membership will feed your curiosity and broaden your perspective. And because the Guardian is independent you can be sure you are hearing all sides of the story.</p>
-                <p class="home-slice__copy">We'll bring you into contact with some of the most influential thinkers in the world. Not only our speakers, but the community of members around you.</p>
-                <p class="home-slice__copy">Join now as a Founding Partner or Patron and we guarantee that the price you pay today will not rise.</p>
+                <p class="home-slice__copy">Guardian Membership feeds your curiosity and broadens your perspective.</p>
+                <p class="home-slice__copy">We introduce you to some of the world's most influential thinkers. Not only our speakers, but the community of members around you.</p>
+                <p class="home-slice__copy">Join now as Founding Partner or Patron and the price you pay will not rise.</p>
                 <a class="action" href="/join">Join today</a>
             </div>
         </div>
