--- a/frontend/app/views/home.scala.html
+++ b/frontend/app/views/home.scala.html
@@ -37,7 +37,7 @@
             @slideShowElement(1, "man_aud_", "Guardian Live with Russell Brand", "one", true)
         </div>
         <div class="home-hero-description-container">
-                <h1 class="home-hero-description">We’re bringing the Guardian to life through live events and meet-ups. <span class="home-hero-description-highlight">Join and be part of the conversations that matter.</span></h1>
+                <h1 class="home-hero-description">We're bringing the Guardian to life through live events and meet-ups. <span class="home-hero-description-highlight">Join and be part of the conversations that matter.</span></h1>
             <a class="action action--no-bottom-margin" href="/join">Join today</a>
         </div>
     </section>
