Revert "Test users front end"

--- a/frontend/app/views/fragments/javaScriptLaterSteps.scala.html
+++ b/frontend/app/views/fragments/javaScriptLaterSteps.scala.html
@@ -9,8 +9,7 @@
         paths: {
             zxcvbn: '@Asset.at("javascripts/lib/zxcvbn/zxcvbn.js")',
             'ophan/ng': '@Config.ophanJsUrl',
-            omniture: '@Asset.at("javascripts/lib/omniture/omniture.js")',
-            zeroclipboard: '@Asset.at("javascripts/lib/zeroclipboard/ZeroClipboard.min.js")'
+            omniture: '@Asset.at("javascripts/lib/omniture/omniture.js")'
         }
     };
 </script>
