add class to allow toggling of benefit boxes again

--- a/frontend/app/views/index.scala.html
+++ b/frontend/app/views/index.scala.html
@@ -127,7 +127,7 @@
     <div class="home-slice home-slice--join-today tier-hidden">
         <div class="home-slice__inner u-cf">
             <h2 class="home-slice__headline">Join membership today</h2>
-            <div class="join-today__join-boxes package-list package-list--flex-box package-list--bordered">
+            <div class="join-today__join-boxes package-list package-list--flex-box package-list--bordered js-benefit-container">
                 @fragments.tier.benefits(currentTier=None, tier=Tier.Friend, showBenefitDetails=false, mode="promo", showLearnMore=true)
                 @fragments.tier.benefits(currentTier=None, tier=Tier.Partner, showBenefitDetails=false, mode="promo", showLearnMore=true)
                 @fragments.tier.benefits(currentTier=None, tier=Tier.Patron, showBenefitDetails=false, mode="promo", showLearnMore=true)
