--- a/frontend/app/views/joiner/thankyou/paid.scala.html
+++ b/frontend/app/views/joiner/thankyou/paid.scala.html
@@ -1,4 +1,4 @@
-@(card: model.Stripe.Card, subscriptionDetails: model.Zuora.SubscriptionDetails, ebIFrameDetail: Option[(String, Int)], tier: com.gu.membership.salesforce.Tier.Tier, firstName: String, userEmail: String, event: Option[model.Eventbrite.EBEvent], upgrade: Boolean)
+@(card: model.Stripe.Card, subscriptionDetails: model.Zuora.SubscriptionDetails, ebIFrameDetail: Option[(String, Int)], tier: com.gu.membership.salesforce.Tier.Tier, firstName: String, userEmail: String, event: Option[model.Eventbrite.RichEvent], upgrade: Boolean)
 
 @import views.support.Dates._
 @import views.support.Prices._
