--- a/frontend/app/views/event/thankyou.scala.html
+++ b/frontend/app/views/event/thankyou.scala.html
@@ -1,4 +1,4 @@
-@(event: model.Eventbrite.EBEvent, order: model.Eventbrite.EBOrder)
+@(event: model.Eventbrite.RichEvent, order: model.Eventbrite.EBOrder)
 
 @import configuration.Config
 @import views.support.Dates._
@@ -13,7 +13,7 @@
 
         <div class="event-summary">
             <div class="event-item__media">
-                <div class="delayed-image-load" data-src="@Config.eventImageUrlPath(event.id)/{width}{pixel_ratio}.jpg" data-alt="@event.name.text" data-class="responsive-img"></div>
+                <div class="delayed-image-load" data-src="@event.imgUrl" data-alt="@event.name.text" data-class="responsive-img"></div>
             </div><div class="event-item__meta">
                 <h2 class="event-item__title">
                     @event.name.text
