--- a/frontend/app/views/fragments/event/itemSummary.scala.html
+++ b/frontend/app/views/fragments/event/itemSummary.scala.html
@@ -1,11 +1,11 @@
-@(event: model.Eventbrite.EBEvent)
+@(event: model.Eventbrite.RichEvent)
 @import views.support.Dates._
 @import configuration.Config
 @import model.Eventbrite._
 
 <div class="event-summary">
     <div class="event-item__media">
-        <div class="delayed-image-load" data-src="@Config.eventImageUrlPath(event.id)/{width}{pixel_ratio}.jpg" data-alt="@event.name.text" data-class="responsive-img"></div>
+        <div class="delayed-image-load" data-src="@event.imgUrl" data-alt="@event.name.text" data-class="responsive-img"></div>
     </div>
     <div class="event-item__meta">
         <h2 class="event-item__title">
