--- a/frontend/app/views/info/help.scala.html
+++ b/frontend/app/views/info/help.scala.html
@@ -35,8 +35,15 @@
             <li><a class="u-underline" href="#terms-conditions-of-membership">What are the terms and conditions of membership?</a></li>
             <li><a class="u-underline" href="#wheelchair-access-for-venue">How can I find out about disabled/wheelchair access for the venue?</a></li>
             <li><a class="u-underline" href="#have-a-question">I've got a question</a></li>
-        </ul>
 
+            <li><a class="u-underline" href="#what-are-guardian-masterclasses">What are Guardian Masterclasses?</a></li>
+            <li><a class="u-underline" href="#can-I-book-without-becoming-member">Can I book a Guardian Masterclass course without becoming a member?</a></li>
+            <li><a class="u-underline" href="#how-many-places-per-course">How many Guardian Masterclasses places can I book for each course?</a></li>
+            <li><a class="u-underline" href="#what-events-are-coming-up">How will I know what Guardian Masterclasses events are coming up?</a></li>
+            <li><a class="u-underline" href="#masterclasses-location">Where do Guardian Masterclasses take place?</a></li>
+            <li><a class="u-underline" href="#masterclasses-refund-policy">What is the Guardian Masterclasses refund policy?</a></li>
+            <li><a class="u-underline" href="#masterclasses-information">Where can I get more information on Guardian Masterclasses?</a></li>
+        </ul>
 
         <section class="help-faqs" id="what-is-membership">
             <h2 class="section-body-headline">What is Guardian Membership?</h2>
@@ -141,6 +148,41 @@
         <section class="help-faqs" id="have-a-question">
             <h2 class="section-body-headline">I've got a question</h2>
             <p>Please email <a href="mailto:membershipsupport@@theguardian.com" class="u-underline">membershipsupport@@theguardian.com</a> with your question. We will do our best to get back to you within 24 hours. Alternatively, you can call the Guardian Membership customer services team on 0330 333 6898 from 8am to 5.30pm Monday to Friday and 8.30am to 12.30pm at weekends.</p>
+        </section>
+
+        <section class="help-faqs" id="what-are-guardian-masterclasses">
+            <h2 class="section-body-headline">What are Guardian Masterclasses?</h2>
+            <p>Guardian Masterclasses match our readers’ interests with a wide range of courses and workshops, harnessing the expertise and specialisms of award-winning Guardian professionals and leading figures from the creative and digital industries.</p>
+        </section>
+
+        <section class="help-faqs" id="can-I-book-without-becoming-member">
+            <h2 class="section-body-headline">Can I book a Guardian Masterclass course without becoming a member?</h2>
+            <p>Yes, Guardian Masterclasses are available to everyone from the <a href="http://www.theguardian.com/guardian-masterclasses" class="u-underline">masterclasses website</a>. However, only Partners and Patrons of the Guardian can enjoy 20% off. In order to receive this discount Masterclasses must be booked through the <a href="https://membership.theguardian.com/masterclasses">Membership Masterclasses listings page</a>.</p>
+        </section>
+
+        <section class="help-faqs" id="how-many-places-per-course">
+            <h2 class="section-body-headline">How many Guardian Masterclass places can I book for each course?</h2>
+            <p>You can buy as many places as you want. Partners and Patrons are entitled to one place at a discount. After you’ve bought your discounted place you can come back and buy as many as you want at full price.</p>
+        </section>
+
+        <section class="help-faqs" id="what-events-are-coming-up">
+            <h2 class="section-body-headline">How will I know what Guardian Masterclasses are coming up?</h2>
+            <p>Our <a href="https://membership.theguardian.com/masterclasses">Masterclasses listings page</a> is updated regularly and when you join membership you will receive a weekly email newsletter containing information about upcoming courses.</p>
+        </section>
+
+        <section class="help-faqs" id="masterclasses-location">
+            <h2 class="section-body-headline">Where do Guardian Masterclasses take place?</h2>
+            <p>Our Masterclasses are held in the meeting rooms and conference spaces of the Guardian's head quarters in King's Cross, London. <a href="http://www.theguardian.com/guardian-masterclasses/how-to-find-us?guni=Article:in%20body%20link">Click here</a> for maps to help you find your way to the Guardian offices, and find your way around inside. We also host Masterclasses in other venues in London and beyond.</p>
+        </section>
+
+        <section class="help-faqs" id="masterclasses-refund-policy">
+            <h2 class="section-body-headline">What is the Guardian Masterclasses refund policy?</h2>
+            <p>You may cancel a Guardian Masterclass if your notification is received by the Masterclasses team a minimum of 14 days prior to the start of the Guardian Masterclass. Provided the Masterclasses team has received your notice of cancellation within this time frame (and acknowledged your notice), Masterclasses will refund any fees received from you less the deposit where applicable. Please ensure the Masterclasses team has acknowledged your notice of cancellation. We will not be able to refund you where we did not receive your notice 14 days before the start of the Guardian Masterclass (regardless of when you sent it). Our tickets are not transferable to other courses or dates.</p>
+        </section>
+
+        <section class="help-faqs" id="masterclasses-information">
+            <h2 class="section-body-headline">Where can I get more information about Guardian Masterclasses?</h2>
+            <p>More frequently asked questions are available <a href="http://www.theguardian.com/guardian-masterclasses/faqs">here</a>.</p>
         </section>
 
     </div>
