Add a clear filter button

--- a/frontend/app/views/event/masterclass.scala.html
+++ b/frontend/app/views/event/masterclass.scala.html
@@ -34,6 +34,7 @@
                        placeholder="Filter by title"
                        autocomplete="off" />
                 <i class="events-list__filter__icon icon-sprite icon-sprite-search"></i>
+                <button class="events-list__filter__cross icon-sprite icon-sprite-cross js-filter-clear"></button>
             </label>
         </div>
     </div>
